// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Native AdvancedRef 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useRef, useEffect } from \\"react\\";

export interface Props {
  showInput: boolean;
}

export default function MyBasicRefComponent(props: Props) {
  const inputRef = useRef<HTMLInputElement>(null);
  const inputNoArgRef = useRef<HTMLLabelElement>(null);
  const [name, setName] = useState(() => \\"PatrickJS\\");

  function onBlur() {
    // Maintain focus
    inputRef.current.focus();
  }

  function lowerCaseName() {
    return name.toLowerCase();
  }

  useEffect(() => {
    console.log(\\"Received an update\\");
  }, [inputRef.current, inputNoArgRef.current]);

  return (
    <View>
      {props.showInput ? (
        <>
          <View
            ref={inputRef}
            value={name}
            onBlur={(event) => onBlur()}
            onChange={(event) => setName(event.target.value)}
            style={styles.view1}
          />

          <View for=\\"cars\\" ref={inputNoArgRef}>
            <Text>Choose a car:</Text>
          </View>

          <View name=\\"cars\\" id=\\"cars\\">
            <View value=\\"supra\\">
              <Text>GR Supra</Text>
            </View>

            <View value=\\"86\\">
              <Text>GR 86</Text>
            </View>
          </View>
        </>
      ) : null}
      <Text>Hello</Text>
      <Text>{lowerCaseName()}</Text>
      <Text>! I can run in React, Qwik, Vue, Solid, or Web Component!</Text>
    </View>
  );
}

const styles = StyleSheet.create({ view1: { color: \\"red\\" } });
"
`;

exports[`React Native Basic 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState } from \\"react\\";

export interface MyBasicComponentProps {
  id: string;
}

export const DEFAULT_VALUES = {
  name: \\"Steve\\",
};

export default function MyBasicComponent(props: MyBasicComponentProps) {
  const [name, setName] = useState(() => \\"Steve\\");

  function underscore_fn_name() {
    return \\"bar\\";
  }

  return (
    <View style={styles.view1}>
      <View
        value={DEFAULT_VALUES.name || name}
        onChange={(myEvent) => setName(myEvent.target.value)}
      />
      <Text>Hello! I can run in React, Vue, Solid, or Liquid!</Text>
    </View>
  );
}

const styles = StyleSheet.create({ view1: { padding: 10 } });
"
`;

exports[`React Native Basic Context 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useContext, useEffect } from \\"react\\";
import { Injector, createInjector, MyService } from \\"@dummy/injection-js\\";

export default function MyBasicComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  function onChange() {
    const change = myService.method(\\"change\\");
    console.log(change);
  }

  const myService = useContext(MyService);

  useEffect(() => {
    const hi = myService.method(\\"hi\\");
    console.log(hi);
  });

  useEffect(() => {
    const bye = myService.method(\\"hi\\");
    console.log(bye);
  }, []);

  return (
    <View>
      <Text>{myService.method(\\"hello\\") + name}</Text>
      <Text>Hello! I can run in React, Vue, Solid, or Liquid!</Text>
      <View onChange={(event) => onChange} />
    </View>
  );
}
"
`;

exports[`React Native Basic OnMount Update 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useEffect } from \\"react\\";

export interface Props {
  hi: string;
  bye: string;
}

export default function MyBasicOnMountUpdateComponent(props: Props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  const [names, setNames] = useState(() => [\\"Steve\\", \\"PatrickJS\\"]);

  useEffect(() => {
    setName(\\"PatrickJS onInit\\" + props.hi);
  });

  useEffect(() => {
    setName(\\"PatrickJS onMount\\" + props.bye);
  }, []);

  return (
    <View>
      <Text>Hello </Text>
      <Text>{name}</Text>
    </View>
  );
}
"
`;

exports[`React Native Basic Outputs 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useEffect } from \\"react\\";

export default function MyBasicOutputsComponent(props: any) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <View />;
}
"
`;

exports[`React Native Basic Outputs Meta 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useEffect } from \\"react\\";

export default function MyBasicOutputsComponent(props: any) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <View />;
}
"
`;

exports[`React Native BasicChildComponent 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState } from \\"react\\";
import MyBasicComponent from \\"./basic.raw\\";
import MyBasicOnMountUpdateComponent from \\"./basic-onMount-update.raw\\";

export default function MyBasicChildComponent(props) {
  const [name, setName] = useState(() => \\"Steve\\");

  const [dev, setDev] = useState(() => \\"PatrickJS\\");

  return (
    <View>
      <MyBasicComponent id={dev} />

      <View>
        <MyBasicOnMountUpdateComponent hi={name} bye={dev} />
      </View>
    </View>
  );
}
"
`;

exports[`React Native BasicFor 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useEffect } from \\"react\\";

export default function MyBasicForComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  const [names, setNames] = useState(() => [\\"Steve\\", \\"PatrickJS\\"]);

  useEffect(() => {
    console.log(\\"onMount code\\");
  }, []);

  return (
    <View>
      {names?.map((person) => (
        <>
          <View
            value={name}
            onChange={(event) => {
              setName(event.target.value + \\" and \\" + person);
            }}
          />
          <Text>Hello </Text>
          <Text>{person}</Text>
          <Text>
            ! I can run in Qwik, Web Component, React, Vue, Solid, or Liquid!
          </Text>
        </>
      ))}
    </View>
  );
}
"
`;

exports[`React Native BasicRef 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useRef } from \\"react\\";

export interface Props {
  showInput: boolean;
}

export default function MyBasicRefComponent(props: Props) {
  const inputRef = useRef<HTMLInputElement>(null);
  const inputNoArgRef = useRef<HTMLLabelElement>(null);
  const [name, setName] = useState(() => \\"PatrickJS\\");

  function onBlur() {
    // Maintain focus
    inputRef.current.focus();
  }

  function lowerCaseName() {
    return name.toLowerCase();
  }

  return (
    <View>
      {props.showInput ? (
        <>
          <View
            ref={inputRef}
            value={name}
            onBlur={(event) => onBlur()}
            onChange={(event) => setName(event.target.value)}
            style={styles.view1}
          />

          <View for=\\"cars\\" ref={inputNoArgRef}>
            <Text>Choose a car:</Text>
          </View>

          <View name=\\"cars\\" id=\\"cars\\">
            <View value=\\"supra\\">
              <Text>GR Supra</Text>
            </View>

            <View value=\\"86\\">
              <Text>GR 86</Text>
            </View>
          </View>
        </>
      ) : null}
      <Text>Hello</Text>
      <Text>{lowerCaseName()}</Text>
      <Text>! I can run in React, Qwik, Vue, Solid, or Web Component!</Text>
    </View>
  );
}

const styles = StyleSheet.create({ view1: { color: \\"red\\" } });
"
`;

exports[`React Native BasicRefAssignment 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useRef } from \\"react\\";

export interface Props {
  showInput: boolean;
}

export default function MyBasicRefAssignmentComponent(props: Props) {
  const holdValueRef = useRef(\\"Patrick\\");
  function handlerClick(event) {
    event.preventDefault();
    console.log(\\"current value\\", holdValueRef.current);
    holdValueRef.current = holdValueRef.current + \\"JS\\";
  }

  return (
    <View>
      <View onClick={(evt) => handlerClick(evt)}>
        <Text>Click</Text>
      </View>
    </View>
  );
}
"
`;

exports[`React Native BasicRefPrevious 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useRef, useEffect } from \\"react\\";

export interface Props {
  showInput: boolean;
}

export function usePrevious<T>(value: T) {
  // The ref object is a generic container whose current property is mutable ...
  // ... and can hold any value, similar to an instance property on a class
  let ref = useRef<T>(null); // Store current value in ref

  onUpdate(() => {
    ref = value;
  }, [value]); // Only re-run if value changes
  // Return previous value (happens before update in useEffect above)

  return ref;
}

export default function MyPreviousComponent(props: Props) {
  const [count, setCount] = useState(() => 0);

  const prevCount = useRef(count);

  useEffect(() => {
    prevCount.current = count;
  }, [count]);

  return (
    <View>
      <View>
        <Text>Now: </Text>
        <Text>{count}</Text>
        <Text>, before: </Text>
        <Text>{prevCount.current}</Text>
      </View>

      <View onClick={(event) => setCount(1)}>
        <Text>Increment</Text>
      </View>
    </View>
  );
}
"
`;

exports[`React Native Button 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface ButtonProps {
  attributes?: any;
  text?: string;
  link?: string;
  openLinkInNewTab?: boolean;
}

export default function Button(props: ButtonProps) {
  return (
    <>
      {props.link ? (
        <>
          <View
            {...props.attributes}
            href={props.link}
            target={props.openLinkInNewTab ? \\"_blank\\" : undefined}
          >
            <Text>{props.text}</Text>
          </View>
        </>
      ) : null}

      {!props.link ? (
        <>
          <View {...props.attributes} type=\\"button\\">
            <Text>{props.text}</Text>
          </View>
        </>
      ) : null}
    </>
  );
}
"
`;

exports[`React Native Columns 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

type Column = {
  content: any; // TODO: Implement this when support for dynamic CSS lands

  width?: number;
};
export interface ColumnProps {
  columns?: Column[]; // TODO: Implement this when support for dynamic CSS lands

  space?: number; // TODO: Implement this when support for dynamic CSS lands

  stackColumnsAt?: \\"tablet\\" | \\"mobile\\" | \\"never\\"; // TODO: Implement this when support for dynamic CSS lands

  reverseColumnsWhenStacked?: boolean;
}

export default function Column(props: ColumnProps) {
  function getColumns() {
    return props.columns || [];
  }

  function getGutterSize() {
    return typeof props.space === \\"number\\" ? props.space || 0 : 20;
  }

  function getWidth(index) {
    const columns = getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }

  function getColumnCssWidth(index) {
    const columns = getColumns();
    const gutterSize = getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${getWidth(index)}% - \${subtractWidth}px)\`;
  }

  return (
    <View style={styles.view1}>
      {props.columns?.map((column, index) => (
        <View style={styles.view2}>
          <Text>{column.content}</Text>

          <Text>{index}</Text>
        </View>
      ))}
    </View>
  );
}

const styles = StyleSheet.create({
  view1: { display: \\"flex\\", flexDirection: \\"column\\", alignItems: \\"stretch\\" },
  view2: { flexGrow: 1 },
});
"
`;

exports[`React Native ContentSlotHtml 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

type Props = {
  [key: string]: string | JSX.Element;
  slotTesting: JSX.Element;
};

export default function ContentSlotCode(props: Props) {
  return (
    <View>
      {props.slotTesting}

      <View>
        <View />
      </View>

      <View>{props.children}</View>
    </View>
  );
}
"
`;

exports[`React Native ContentSlotJSX 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

type Props = {
  [key: string]: string | JSX.Element;
};

export default function ContentSlotJsxCode(props: Props) {
  return (
    <View>
      <Text>{props.slotTesting}</Text>

      <View>
        <View />
      </View>

      <View>
        <Text>{props.children}</Text>
      </View>
    </View>
  );
}
"
`;

exports[`React Native CustomCode 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useRef, useEffect } from \\"react\\";

export interface CustomCodeProps {
  code: string;
  replaceNodes?: boolean;
}

export default function CustomCode(props: CustomCodeProps) {
  const elem = useRef<HTMLDivElement>(null);
  const [scriptsInserted, setScriptsInserted] = useState(() => []);

  const [scriptsRun, setScriptsRun] = useState(() => []);

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem.current && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.current.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted.includes(script.src)) {
            continue;
          }

          scriptsInserted.push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun.includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun.push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  useEffect(() => {
    findAndRunScripts();
  }, []);

  return <View ref={elem} dangerouslySetInnerHTML={{ __html: props.code }} />;
}
"
`;

exports[`React Native Embed 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useRef, useEffect } from \\"react\\";

export interface CustomCodeProps {
  code: string;
  replaceNodes?: boolean;
}

export default function CustomCode(props: CustomCodeProps) {
  const elem = useRef<HTMLDivElement>(null);
  const [scriptsInserted, setScriptsInserted] = useState(() => []);

  const [scriptsRun, setScriptsRun] = useState(() => []);

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem.current && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.current.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted.includes(script.src)) {
            continue;
          }

          scriptsInserted.push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun.includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun.push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  useEffect(() => {
    findAndRunScripts();
  }, []);

  return <View ref={elem} dangerouslySetInnerHTML={{ __html: props.code }} />;
}
"
`;

exports[`React Native Form 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useRef } from \\"react\\";

export interface FormProps {
  attributes?: any;
  name?: string;
  action?: string;
  validate?: boolean;
  method?: string;
  builderBlock?: BuilderElement;
  sendSubmissionsTo?: string;
  sendSubmissionsToEmail?: string;
  sendWithJs?: boolean;
  contentType?: string;
  customHeaders?: {
    [key: string]: string;
  };
  successUrl?: string;
  previewState?: FormState;
  successMessage?: BuilderElement[];
  errorMessage?: BuilderElement[];
  sendingMessage?: BuilderElement[];
  resetFormOnSubmit?: boolean;
  errorMessagePath?: string;
}
export type FormState = \\"unsubmitted\\" | \\"sending\\" | \\"success\\" | \\"error\\";
import { BuilderBlock as BuilderBlockComponent } from \\"@fake\\";
import { Builder, builder } from \\"@builder.io/sdk\\";
import { BuilderBlocks } from \\"@fake\\";
import { set } from \\"@fake\\";
import { get } from \\"@fake\\";

export default function FormComponent(props: FormProps) {
  const formRef = useRef<HTMLFormElement>(null);
  const [state, setState] = useState(() => \\"unsubmitted\\");

  const [responseData, setResponseData] = useState(() => null);

  const [formErrorMessage, setFormErrorMessage] = useState(() => \\"\\");

  function submissionState() {
    return (Builder.isEditing && props.previewState) || state;
  }

  function onSubmit(event) {
    const sendWithJs = props.sendWithJs || props.sendSubmissionsTo === \\"email\\";

    if (props.sendSubmissionsTo === \\"zapier\\") {
      event.preventDefault();
    } else if (sendWithJs) {
      if (!(props.action || props.sendSubmissionsTo === \\"email\\")) {
        event.preventDefault();
        return;
      }

      event.preventDefault();
      const el = event.currentTarget;
      const headers = props.customHeaders || {};
      let body;
      const formData = new FormData(el); // TODO: maybe support null

      const formPairs = Array.from(
        event.currentTarget.querySelectorAll(\\"input,select,textarea\\")
      )
        .filter((el) => !!el.name)
        .map((el) => {
          let value;
          const key = el.name;

          if (el instanceof HTMLInputElement) {
            if (el.type === \\"radio\\") {
              if (el.checked) {
                value = el.name;
                return {
                  key,
                  value,
                };
              }
            } else if (el.type === \\"checkbox\\") {
              value = el.checked;
            } else if (el.type === \\"number\\" || el.type === \\"range\\") {
              const num = el.valueAsNumber;

              if (!isNaN(num)) {
                value = num;
              }
            } else if (el.type === \\"file\\") {
              // TODO: one vs multiple files
              value = el.files;
            } else {
              value = el.value;
            }
          } else {
            value = el.value;
          }

          return {
            key,
            value,
          };
        });
      let contentType = props.contentType;

      if (props.sendSubmissionsTo === \\"email\\") {
        contentType = \\"multipart/form-data\\";
      }

      Array.from(formPairs).forEach(({ value }) => {
        if (
          value instanceof File ||
          (Array.isArray(value) && value[0] instanceof File) ||
          value instanceof FileList
        ) {
          contentType = \\"multipart/form-data\\";
        }
      }); // TODO: send as urlEncoded or multipart by default
      // because of ease of use and reliability in browser API
      // for encoding the form?

      if (contentType !== \\"application/json\\") {
        body = formData;
      } else {
        // Json
        const json = {};
        Array.from(formPairs).forEach(({ value, key }) => {
          set(json, key, value);
        });
        body = JSON.stringify(json);
      }

      if (contentType && contentType !== \\"multipart/form-data\\") {
        if (
          /* Zapier doesn't allow content-type header to be sent from browsers */ !(
            sendWithJs && props.action?.includes(\\"zapier.com\\")
          )
        ) {
          headers[\\"content-type\\"] = contentType;
        }
      }
      const presubmitEvent = new CustomEvent(\\"presubmit\\", { detail: { body } });
      if (formRef.current) {
        formRef.current.dispatchEvent(presubmitEvent);
        if (presubmitEvent.defaultPrevented) {
          return;
        }
      }
      setState(\\"sending\\");
      const formUrl = \`\${
        builder.env === \\"dev\\" ? \\"http://localhost:5000\\" : \\"https://builder.io\\"
      }/api/v1/form-submit?apiKey=\${builder.apiKey}&to=\${btoa(
        props.sendSubmissionsToEmail || \\"\\"
      )}&name=\${encodeURIComponent(props.name || \\"\\")}\`;
      fetch(
        props.sendSubmissionsTo === \\"email\\"
          ? formUrl
          : props.action /* TODO: throw error if no action URL */,
        { body, headers, method: props.method || \\"post\\" }
      ).then(
        async (res) => {
          let body;
          const contentType = res.headers.get(\\"content-type\\");
          if (contentType && contentType.indexOf(\\"application/json\\") !== -1) {
            body = await res.json();
          } else {
            body = await res.text();
          }
          if (!res.ok && props.errorMessagePath) {
            /* TODO: allow supplying an error formatter function */ let message =
              get(body, props.errorMessagePath);
            if (message) {
              if (typeof message !== \\"string\\") {
                /* TODO: ideally convert json to yaml so it woul dbe like            error: - email has been taken */ message =
                  JSON.stringify(message);
              }
              setFormErrorMessage(message);
            }
          }
          setResponseData(body);
          setState(res.ok ? \\"success\\" : \\"error\\");
          if (res.ok) {
            const submitSuccessEvent = new CustomEvent(\\"submit:success\\", {
              detail: { res, body },
            });
            if (formRef.current) {
              formRef.current.dispatchEvent(submitSuccessEvent);
              if (submitSuccessEvent.defaultPrevented) {
                return;
              }
              /* TODO: option to turn this on/off? */ if (
                props.resetFormOnSubmit !== false
              ) {
                formRef.current.reset();
              }
            }
            /* TODO: client side route event first that can be preventDefaulted */ if (
              props.successUrl
            ) {
              if (formRef.current) {
                const event = new CustomEvent(\\"route\\", {
                  detail: { url: props.successUrl },
                });
                formRef.current.dispatchEvent(event);
                if (!event.defaultPrevented) {
                  location.href = props.successUrl;
                }
              } else {
                location.href = props.successUrl;
              }
            }
          }
        },
        (err) => {
          const submitErrorEvent = new CustomEvent(\\"submit:error\\", {
            detail: { error: err },
          });
          if (formRef.current) {
            formRef.current.dispatchEvent(submitErrorEvent);
            if (submitErrorEvent.defaultPrevented) {
              return;
            }
          }
          setResponseData(err);
          setState(\\"error\\");
        }
      );
    }
  }
  return (
    <View
      {...props.attributes}
      validate={props.validate}
      ref={formRef}
      action={!props.sendWithJs && props.action}
      method={props.method}
      name={props.name}
      onSubmit={(event) => onSubmit(event)}
    >
      {\\" \\"}
      {props.builderBlock && props.builderBlock.children ? (
        <>
          {props.builderBlock?.children?.map((block, index) => (
            <BuilderBlockComponent key={block.id} block={block} index={index} />
          ))}
        </>
      ) : null}{\\" \\"}
      {submissionState() === \\"error\\" ? (
        <>
          <BuilderBlocks dataPath=\\"errorMessage\\" blocks={props.errorMessage} />
        </>
      ) : null}{\\" \\"}
      {submissionState() === \\"sending\\" ? (
        <>
          <BuilderBlocks
            dataPath=\\"sendingMessage\\"
            blocks={props.sendingMessage}
          />
        </>
      ) : null}{\\" \\"}
      {submissionState() === \\"error\\" && responseData ? (
        <>
          <View style={styles.view1}>
            {\\" \\"}
            <Text>{JSON.stringify(responseData, null, 2)}</Text>{\\" \\"}
          </View>
        </>
      ) : null}{\\" \\"}
      {submissionState() === \\"success\\" ? (
        <>
          <BuilderBlocks
            dataPath=\\"successMessage\\"
            blocks={props.successMessage}
          />
        </>
      ) : null}{\\" \\"}
    </View>
  );
}
const styles = StyleSheet.create({
  view1: { padding: 10, color: \\"red\\", textAlign: \\"center\\" },
});
"
`;

exports[`React Native Image 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useRef, useEffect } from \\"react\\";

// TODO: AMP Support?
export interface ImageProps {
  _class?: string;
  image: string;
  sizes?: string;
  lazy?: boolean;
  height?: number;
  width?: number;
  altText?: string;
  backgroundSize?: string;
  backgroundPosition?: string; // TODO: Support generating Builder.io and or Shopify \`srcset\`s when needed

  srcset?: string; // TODO: Implement support for custom aspect ratios

  aspectRatio?: number; // TODO: This might not work as expected in terms of positioning

  children?: any;
}

export default function Image(props: ImageProps) {
  const pictureRef = useRef<HTMLElement>(null);
  const [scrollListener, setScrollListener] = useState(() => null);

  const [imageLoaded, setImageLoaded] = useState(() => false);

  function setLoaded() {
    setImageLoaded(true);
  }

  function useLazyLoading() {
    // TODO: Add more checks here, like testing for real web browsers
    return !!props.lazy && isBrowser();
  }

  function isBrowser() {
    return (
      typeof window !== \\"undefined\\" && window.navigator.product != \\"ReactNative\\"
    );
  }

  const [load, setLoad] = useState(() => false);

  useEffect(() => {
    if (useLazyLoading()) {
      // throttled scroll capture listener
      const listener = () => {
        if (pictureRef.current) {
          const rect = pictureRef.current.getBoundingClientRect();
          const buffer = window.innerHeight / 2;

          if (rect.top < window.innerHeight + buffer) {
            setLoad(true);
            setScrollListener(null);
            window.removeEventListener(\\"scroll\\", listener);
          }
        }
      };

      setScrollListener(listener);
      window.addEventListener(\\"scroll\\", listener, {
        capture: true,
        passive: true,
      });
      listener();
    }
  }, []);

  useEffect(() => {
    return () => {
      if (scrollListener) {
        window.removeEventListener(\\"scroll\\", scrollListener);
      }
    };
  }, []);

  return (
    <>
      <View ref={pictureRef}>
        {!useLazyLoading() || load ? (
          <>
            <View
              alt={props.altText}
              aria-role={props.altText ? \\"presentation\\" : undefined}
              src={props.image}
              onLoad={(event) => setLoaded()}
              srcset={props.srcset}
              sizes={props.sizes}
              style={styles.view1}
            />
          </>
        ) : null}

        <View srcset={props.srcset} />
      </View>

      <Text>{props.children}</Text>
    </>
  );
}

const styles = StyleSheet.create({
  view1: {
    opacity: 1,
    transition: \\"opacity 0.2s ease-in-out\\",
    objectFit: \\"cover\\",
    objectPosition: \\"center\\",
  },
});
"
`;

exports[`React Native Image State 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState } from \\"react\\";

export default function ImgStateComponent(props) {
  const [canShow, setCanShow] = useState(() => true);

  const [images, setImages] = useState(() => [\\"http://example.com/qwik.png\\"]);

  return (
    <View>
      {images?.map((item, itemIndex) => (
        <>
          <View src={item} key={itemIndex} />
        </>
      ))}
    </View>
  );
}
"
`;

exports[`React Native Img 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface ImgProps {
  attributes?: any;
  imgSrc?: string;
  altText?: string;
  backgroundSize?: \\"cover\\" | \\"contain\\";
  backgroundPosition?:
    | \\"center\\"
    | \\"top\\"
    | \\"left\\"
    | \\"right\\"
    | \\"bottom\\"
    | \\"top left\\"
    | \\"top right\\"
    | \\"bottom left\\"
    | \\"bottom right\\";
}

import { Builder } from \\"@builder.io/sdk\\";

export default function ImgComponent(props: ImgProps) {
  return (
    <View
      {...props.attributes}
      style={{
        objectFit: props.backgroundSize || \\"cover\\",
        objectPosition: props.backgroundPosition || \\"center\\",
      }}
      key={(Builder.isEditing && props.imgSrc) || \\"default-key\\"}
      alt={props.altText}
      src={props.imgSrc}
    />
  );
}
"
`;

exports[`React Native Input 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface FormInputProps {
  type?: string;
  attributes?: any;
  name?: string;
  value?: string;
  placeholder?: string;
  defaultValue?: string;
  required?: boolean;
}

import { Builder } from \\"@builder.io/sdk\\";

export default function FormInputComponent(props: FormInputProps) {
  return (
    <View
      {...props.attributes}
      key={
        Builder.isEditing && props.defaultValue
          ? props.defaultValue
          : \\"default-key\\"
      }
      placeholder={props.placeholder}
      type={props.type}
      name={props.name}
      value={props.value}
      defaultValue={props.defaultValue}
      required={props.required}
    />
  );
}
"
`;

exports[`React Native RawText 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface RawTextProps {
  attributes?: any;
  text?: string; // builderBlock?: any;
}

export default function RawText(props: RawTextProps) {
  return <View dangerouslySetInnerHTML={{ __html: props.text || \\"\\" }} />;
}
"
`;

exports[`React Native Remove Internal mitosis package 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState } from \\"react\\";

export default function MyBasicComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  return (
    <View>
      <Text>Hello </Text>
      <Text>{name}</Text>
      <Text>! I can run in React, Qwik, Vue, Solid, or Liquid!</Text>
    </View>
  );
}
"
`;

exports[`React Native Section 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface SectionProps {
  maxWidth?: number;
  attributes?: any;
  children?: any;
}

export default function SectionComponent(props: SectionProps) {
  return (
    <View
      {...props.attributes}
      style={
        props.maxWidth && typeof props.maxWidth === \\"number\\"
          ? {
              maxWidth: props.maxWidth,
            }
          : undefined
      }
    >
      <Text>{props.children}</Text>
    </View>
  );
}
"
`;

exports[`React Native Select 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface FormSelectProps {
  options?: {
    name?: string;
    value: string;
  }[];
  attributes?: any;
  name?: string;
  value?: string;
  defaultValue?: string;
}

import { Builder } from \\"@builder.io/sdk\\";

export default function SelectComponent(props: FormSelectProps) {
  return (
    <View
      {...props.attributes}
      value={props.value}
      key={
        Builder.isEditing && props.defaultValue
          ? props.defaultValue
          : \\"default-key\\"
      }
      defaultValue={props.defaultValue}
      name={props.name}
    >
      {props.options?.map((option, index) => (
        <View value={option.value} data-index={index}>
          <Text>{option.name || option.value}</Text>
        </View>
      ))}
    </View>
  );
}
"
`;

exports[`React Native SlotHtml 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

type Props = {
  [key: string]: string;
};
import ContentSlotCode from \\"./content-slot-jsx.raw\\";

export default function SlotCode(props: Props) {
  return (
    <View>
      <ContentSlotCode slotTesting={<div>Hello</div>}></ContentSlotCode>
    </View>
  );
}
"
`;

exports[`React Native SlotJsx 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

type Props = {
  [key: string]: string;
};
import ContentSlotCode from \\"./content-slot-jsx.raw\\";

export default function SlotCode(props: Props) {
  return (
    <View>
      <ContentSlotCode slotTesting={<div>Hello</div>} />
    </View>
  );
}
"
`;

exports[`React Native Stamped.io 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useEffect } from \\"react\\";

type SmileReviewsProps = {
  productId: string;
  apiKey: string;
};
import { kebabCase } from \\"lodash\\";
import { snakeCase } from \\"lodash\\";

export default function SmileReviews(props: SmileReviewsProps) {
  const [reviews, setReviews] = useState(() => []);

  const [name, setName] = useState(() => \\"test\\");

  const [showReviewPrompt, setShowReviewPrompt] = useState(() => false);

  function kebabCaseValue() {
    return kebabCase(\\"testThat\\");
  }

  function snakeCaseValue() {
    return snakeCase(\\"testThis\\");
  }

  useEffect(() => {
    fetch(
      \`https://stamped.io/api/widget/reviews?storeUrl=builder-io.myshopify.com&apiKey=\${
        props.apiKey || \\"pubkey-8bbDq7W6w4sB3OWeM1HUy2s47702hM\\"
      }&productId=\${props.productId || \\"2410511106127\\"}\`
    )
      .then((res) => res.json())
      .then((data) => {
        setReviews(data.data);
      });
  }, []);

  return (
    <View data-user={name}>
      <View onClick={(event) => setShowReviewPrompt(true)}>
        <Text>Write a review</Text>
      </View>

      {showReviewPrompt ? (
        <>
          <View placeholder=\\"Email\\" />
          <View placeholder=\\"Title\\" style={styles.view1} />
          <View placeholder=\\"How was your experience?\\" style={styles.view2} />
          <View
            onClick={(event) => {
              event.preventDefault();
              setShowReviewPrompt(false);
            }}
            style={styles.view3}
          >
            <Text>Submit</Text>
          </View>
        </>
      ) : null}

      {reviews?.map((review, index) => (
        <View key={review.id} style={styles.view4}>
          <View src={review.avatar} style={styles.view5} />

          <View>
            <View>
              <Text>N: </Text>
              <Text>{index}</Text>
            </View>

            <View>
              <Text>{review.author}</Text>
            </View>

            <View>
              <Text>{review.reviewMessage}</Text>
            </View>
          </View>
        </View>
      ))}
    </View>
  );
}

const styles = StyleSheet.create({
  view1: { display: \\"block\\" },
  view2: { display: \\"block\\" },
  view3: { display: \\"block\\" },
  view4: {
    margin: 10,
    padding: 10,
    background: \\"white\\",
    display: \\"flex\\",
    borderRadius: 5,
    boxShadow: 0,
  },
  view5: { height: 30, width: 30, marginRight: 10 },
});
"
`;

exports[`React Native Submit 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface ButtonProps {
  attributes?: any;
  text?: string;
}

export default function SubmitButton(props: ButtonProps) {
  return (
    <View {...props.attributes} type=\\"submit\\">
      <Text>{props.text}</Text>
    </View>
  );
}
"
`;

exports[`React Native Text 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState } from \\"react\\";

export interface TextProps {
  attributes?: any;
  rtlMode: boolean;
  text?: string;
  content?: string;
  builderBlock?: any;
}

import { Builder } from \\"@builder.io/sdk\\";

export default function Text(props: TextProps) {
  const [name, setName] = useState(() => \\"Decadef20\\");

  return (
    <View
      contentEditable={allowEditingText || undefined}
      data-name={{
        test: name || \\"any name\\",
      }}
      dangerouslySetInnerHTML={{
        __html:
          props.text ||
          props.content ||
          name ||
          '<p class=\\"text-lg\\">my name</p>',
      }}
    />
  );
}
"
`;

exports[`React Native Textarea 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface TextareaProps {
  attributes?: any;
  name?: string;
  value?: string;
  defaultValue?: string;
  placeholder?: string;
}

export default function Textarea(props: TextareaProps) {
  return (
    <View
      {...props.attributes}
      placeholder={props.placeholder}
      name={props.name}
      value={props.value}
      defaultValue={props.defaultValue}
    />
  );
}
"
`;

exports[`React Native Video 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface VideoProps {
  attributes?: any;
  video?: string;
  autoPlay?: boolean;
  controls?: boolean;
  muted?: boolean;
  loop?: boolean;
  playsInline?: boolean;
  aspectRatio?: number;
  width?: number;
  height?: number;
  fit?: \\"contain\\" | \\"cover\\" | \\"fill\\";
  position?:
    | \\"center\\"
    | \\"top\\"
    | \\"left\\"
    | \\"right\\"
    | \\"bottom\\"
    | \\"top left\\"
    | \\"top right\\"
    | \\"bottom left\\"
    | \\"bottom right\\";
  posterImage?: string;
  lazyLoad?: boolean;
}

export default function Video(props: VideoProps) {
  return (
    <View
      {...props.attributes}
      preload=\\"none\\"
      style={{
        width: \\"100%\\",
        height: \\"100%\\",
        ...props.attributes?.style,
        objectFit: props.fit,
        objectPosition: props.position,
        // Hack to get object fit to work as expected and
        // not have the video overflow
        borderRadius: 1,
      }}
      key={props.video || \\"no-src\\"}
      poster={props.posterImage}
      autoplay={props.autoPlay}
      muted={props.muted}
      controls={props.controls}
      loop={props.loop}
    />
  );
}
"
`;

exports[`React Native basicForwardRef 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, forwardRef } from \\"react\\";

export interface Props {
  showInput: boolean;
  inputRef: HTMLInputElement;
}

export default forwardRef<Props[\\"inputRef\\"]>(
  function MyBasicForwardRefComponent(props: Props, inputRef) {
    const [name, setName] = useState(() => \\"PatrickJS\\");

    return (
      <View>
        <View
          ref={inputRef}
          value={name}
          onChange={(event) => setName(event.target.value)}
          style={styles.view1}
        />
      </View>
    );
  }
);

const styles = StyleSheet.create({ view1: { color: \\"red\\" } });
"
`;

exports[`React Native basicForwardRefMetadata 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, forwardRef } from \\"react\\";

export interface Props {
  showInput: boolean;
  inputRef: HTMLInputElement;
}

export default forwardRef<Props[\\"inputRef\\"]>(
  function MyBasicForwardRefComponent(props: Props, inputRef) {
    const [name, setName] = useState(() => \\"PatrickJS\\");

    return (
      <View>
        <View
          ref={inputRef}
          value={name}
          onChange={(event) => setName(event.target.value)}
          style={styles.view1}
        />
      </View>
    );
  }
);

const styles = StyleSheet.create({ view1: { color: \\"red\\" } });
"
`;

exports[`React Native basicOnUpdateReturn 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useEffect } from \\"react\\";

export default function MyBasicOnUpdateReturnComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        setName(data.name);
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }, [name]);

  return (
    <View>
      <Text>Hello! </Text>
      <Text>{name}</Text>
    </View>
  );
}
"
`;

exports[`React Native class + ClassName + css 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export default function MyBasicComponent(props) {
  return (
    <View style={styles.view1}>
      <Text>Hello! I can run in React, Vue, Solid, or Liquid!</Text>
    </View>
  );
}

const styles = StyleSheet.create({ view1: { padding: 10 } });
"
`;

exports[`React Native class + css 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export default function MyBasicComponent(props) {
  return (
    <View style={styles.view1}>
      <Text>Hello! I can run in React, Vue, Solid, or Liquid!</Text>
    </View>
  );
}

const styles = StyleSheet.create({ view1: { padding: 10 } });
"
`;

exports[`React Native className + css 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export default function MyBasicComponent(props) {
  return (
    <View style={styles.view1}>
      <Text>Hello! I can run in React, Vue, Solid, or Liquid!</Text>
    </View>
  );
}

const styles = StyleSheet.create({ view1: { padding: 10 } });
"
`;

exports[`React Native className 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState } from \\"react\\";

type Props = {
  [key: string]: string | JSX.Element;
  slotTesting: JSX.Element;
};

export default function ClassNameCode(props: Props) {
  const [bindings, setBindings] = useState(() => \\"a binding\\");

  return (
    <View>
      <View>
        <Text>Without Binding</Text>
      </View>

      <View>
        <Text>With binding</Text>
      </View>
    </View>
  );
}
"
`;

exports[`React Native classState 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState } from \\"react\\";

export default function MyBasicComponent(props) {
  const [classState, setClassState] = useState(() => \\"testClassName\\");

  const [styleState, setStyleState] = useState(() => ({
    color: \\"red\\",
  }));

  return (
    <View style={styles.view1}>
      <Text>Hello! I can run in React, Vue, Solid, or Liquid!</Text>
    </View>
  );
}

const styles = StyleSheet.create({ view1: { padding: 10 } });
"
`;

exports[`React Native defaultProps 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface ButtonProps {
  attributes?: any;
  text?: string;
  link?: string;
  openLinkInNewTab?: boolean;
}

export default function Button(props: ButtonProps) {
  return (
    <>
      {props.link ? (
        <>
          <View
            {...props.attributes}
            href={props.link}
            target={props.openLinkInNewTab ? \\"_blank\\" : undefined}
          >
            <Text>{props.text}</Text>
          </View>
        </>
      ) : null}

      {!props.link ? (
        <>
          <View {...props.attributes} type=\\"button\\">
            <Text>{props.text}</Text>
          </View>
        </>
      ) : null}
    </>
  );
}

Button.defaultProps = {
  text: \\"default text\\",
  link: false,
  openLinkInNewTab: false,
};
"
`;

exports[`React Native multipleOnUpdate 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useEffect } from \\"react\\";

export default function MultipleOnUpdate(props) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
  useEffect(() => {
    console.log(\\"Runs on every update/rerender as well\\");
  });

  return <View />;
}
"
`;

exports[`React Native multipleOnUpdateWithDeps 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useEffect } from \\"react\\";

export default function MultipleOnUpdateWithDeps(props) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  const [c, setC] = useState(() => \\"c\\");

  const [d, setD] = useState(() => \\"d\\");

  useEffect(() => {
    console.log(\\"Runs when a or b changes\\", a, b);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [a, b]);
  useEffect(() => {
    console.log(\\"Runs when c or d changes\\", c, d);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [c, d]);

  return <View />;
}
"
`;

exports[`React Native nestedShow 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

interface Props {
  conditionA: boolean;
  conditionB: boolean;
}

export default function NestedShow(props: Props) {
  return (
    <>
      {props.conditionA ? (
        <>
          {!props.conditionB ? (
            <>
              <View>
                <Text>if condition A and condition B</Text>
              </View>
            </>
          ) : (
            <View>
              <Text>else-condition-B</Text>
            </View>
          )}
        </>
      ) : (
        <View>
          <Text>else-condition-A</Text>
        </View>
      )}
    </>
  );
}
"
`;

exports[`React Native nestedStyles 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export default function NestedStyles(props) {
  return (
    <View style={styles.view1}>
      <Text>Hello world</Text>
    </View>
  );
}

const styles = StyleSheet.create({
  view1: {
    display: \\"flex\\",
    foo: \\"var(--bar)\\",
    \\"&:hover\\": { display: \\"flex\\" },
    \\".nested-selector\\": { display: \\"grid\\" },
  },
});
"
`;

exports[`React Native onInit & onMount 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useEffect } from \\"react\\";

export default function OnInit(props) {
  useEffect(() => {
    console.log(\\"onInit\\");
  });

  useEffect(() => {
    console.log(\\"onMount\\");
  }, []);

  return <View />;
}
"
`;

exports[`React Native onInit 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useEffect } from \\"react\\";

type Props = {
  name: string;
};

export const defaultValues = {
  name: \\"PatrickJS\\",
};

export default function OnInit(props: Props) {
  const [name, setName] = useState(() => \\"\\");

  useEffect(() => {
    setName(defaultValues.name || props.name);
    console.log(\\"set defaults with props\\");
  });

  return (
    <View>
      <Text>Default name defined by parent </Text>
      <Text>{name}</Text>
    </View>
  );
}
"
`;

exports[`React Native onMount 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useEffect } from \\"react\\";

export default function Comp(props) {
  useEffect(() => {
    console.log(\\"Runs on mount\\");
  }, []);

  useEffect(() => {
    return () => {
      console.log(\\"Runs on unMount\\");
    };
  }, []);

  return <View />;
}
"
`;

exports[`React Native onUpdate 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useEffect } from \\"react\\";

export default function OnUpdate(props) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });

  return <View />;
}
"
`;

exports[`React Native onUpdateWithDeps 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState, useEffect } from \\"react\\";

export default function OnUpdateWithDeps(props) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  useEffect(() => {
    console.log(\\"Runs when a or b changes\\", a, b);
  }, [a, b]);

  return <View />;
}
"
`;

exports[`React Native preserveExportOrLocalStatement 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

type Types = {
  s: any[];
};
interface IPost {
  len: number;
}
export interface MyBasicComponentProps {
  id: string;
}

const b = 3;
const foo = () => {};
export const a = 3;
export const bar = () => {};
export function run<T>(value: T) {}

export default function MyBasicComponent(props: MyBasicComponentProps) {
  return <View />;
}
"
`;

exports[`React Native preserveTyping 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export type A = \\"test\\";
export interface C {
  n: \\"test\\";
}
type B = \\"test2\\";
interface D {
  n: \\"test\\";
}
export interface MyBasicComponentProps {
  name: string;
  age?: number;
}

export default function MyBasicComponent(props: MyBasicComponentProps) {
  return (
    <View>
      <Text>Hello! I can run in React, Vue, Solid, or Liquid! </Text>
      <Text>{props.name}</Text>
    </View>
  );
}
"
`;

exports[`React Native propsDestructure 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import { useState } from \\"react\\";

type Props = {
  children: any;
  type: string;
};

export default function MyBasicComponent(props: Props) {
  const [name, setName] = useState(() => \\"Decadef20\\");

  return (
    <View>
      <Text>{props.children}</Text>

      <Text>{props.type}</Text>
      <Text>Hello! I can run in React, Vue, Solid, or Liquid!</Text>
    </View>
  );
}
"
`;

exports[`React Native propsInterface 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

interface Person {
  name: string;
  age?: number;
}

export default function MyBasicComponent(props: Person | never) {
  return (
    <View>
      <Text>Hello! I can run in React, Vue, Solid, or Liquid! </Text>
      <Text>{props.name}</Text>
    </View>
  );
}
"
`;

exports[`React Native propsType 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

type Person = {
  name: string;
  age?: number;
};

export default function MyBasicComponent(props: Person) {
  return (
    <View>
      <Text>Hello! I can run in React, Vue, Solid, or Liquid! </Text>
      <Text>{props.name}</Text>
    </View>
  );
}
"
`;

exports[`React Native rootShow 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export interface RenderStylesProps {
  foo: string;
}

export default function RenderStyles(props: RenderStylesProps) {
  return (
    <>
      {props.foo === \\"bar\\" ? (
        <>
          <View>
            <Text>Bar</Text>
          </View>
        </>
      ) : (
        <View>
          <Text>Foo</Text>
        </View>
      )}
    </>
  );
}
"
`;

exports[`React Native self-referencing component 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export default function MyComponent(props: any) {
  return (
    <View>
      <Text>{props.name}</Text>

      {props.name === \\"Batman\\" ? (
        <>
          <MyComponent name=\\"Bruce Wayne\\" />
        </>
      ) : null}
    </View>
  );
}
"
`;

exports[`React Native self-referencing component with children 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

export default function MyComponent(props: any) {
  return (
    <View>
      <Text>{props.name}</Text>

      <Text>{props.children}</Text>

      {props.name === \\"Batman\\" ? (
        <>
          <MyComponent name=\\"Bruce\\">
            <View>
              <Text>Wayne</Text>
            </View>
          </MyComponent>
        </>
      ) : null}
    </View>
  );
}
"
`;

exports[`React Native showWithFor 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";

interface Props {
  conditionA: boolean;
  items: string[];
}

export default function NestedShow(props: Props) {
  return (
    <>
      {props.conditionA ? (
        <>
          {props.items?.map((item, idx) => (
            <View key={idx}>
              <Text>{item}</Text>
            </View>
          ))}
        </>
      ) : (
        <View>
          <Text>else-condition-A</Text>
        </View>
      )}
    </>
  );
}
"
`;

exports[`React Native subComponent 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import Foo from \\"./foo-sub-component.lite\\";

export default function SubComponent(props) {
  return <Foo />;
}
"
`;

exports[`React Native typeDependency 1`] = `
"import * as React from \\"react\\";
import { View, StyleSheet, Image, Text } from \\"react-native\\";
import type { Foo } from \\"./foo-type\\";
import type { Foo as Foo2 } from \\"./type-export\\";
export type TypeDependencyProps = {
  foo: Foo;
  foo2: Foo2;
};

export default function TypeDependency(props: TypeDependencyProps) {
  return (
    <View>
      <Text>{props.foo}</Text>
    </View>
  );
}
"
`;
